--- a/XCFAPPSwift/XCFAPPSwift/Classes/Kitchen - 下厨房/Main - 下厨房/View/XCFKitchenCell/XCFKitchenRecipeCell.xib
+++ b/XCFAPPSwift/XCFAPPSwift/Classes/Kitchen - 下厨房/Main - 下厨房/View/XCFKitchenCell/XCFKitchenRecipeCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,14 +7,168 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="196" id="KGk-i7-Jjw" customClass="XCFKitchenRecipeCell" customModule="XCFAPPSwift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="196"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XCFKitchenViewControllerCell" rowHeight="264" id="KGk-i7-Jjw" customClass="XCFKitchenRecipeCell" customModule="XCFAPPSwift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="604" height="264"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="195"/>
+                <rect key="frame" x="0.0" y="0.0" width="604" height="263"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2od-6O-s95">
+                        <rect key="frame" x="0.0" y="0.0" width="604" height="150"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NTR-NF-shc">
+                                <rect key="frame" x="0.0" y="0.0" width="604" height="150"/>
+                            </imageView>
+                            <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22p-Fe-B43">
+                                <rect key="frame" x="0.0" y="0.0" width="604" height="150"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8D-CR-vzo" userLabel="whisperLabel ">
+                                <rect key="frame" x="302" y="75" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnX-J6-Qra" userLabel="imageTitle">
+                                <rect key="frame" x="302" y="75" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lh7-Cc-9ga" userLabel="imageDetaile">
+                                <rect key="frame" x="302" y="45" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iuO-s7-NIh">
+                                <rect key="frame" x="280" y="53" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="0ZS-xM-3rz"/>
+                                    <constraint firstAttribute="height" constant="44" id="mIm-C5-Sfb"/>
+                                </constraints>
+                                <state key="normal" image="playButton"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nnX-J6-Qra" firstAttribute="top" secondItem="Lh7-Cc-9ga" secondAttribute="bottom" constant="30" id="3ox-GU-Q1k"/>
+                            <constraint firstAttribute="bottom" secondItem="NTR-NF-shc" secondAttribute="bottom" id="Bgz-Y4-huH"/>
+                            <constraint firstItem="22p-Fe-B43" firstAttribute="leading" secondItem="2od-6O-s95" secondAttribute="leading" id="GB6-8b-UGE"/>
+                            <constraint firstItem="NTR-NF-shc" firstAttribute="top" secondItem="2od-6O-s95" secondAttribute="top" id="Gbf-pq-SU4"/>
+                            <constraint firstItem="Lh7-Cc-9ga" firstAttribute="centerX" secondItem="2od-6O-s95" secondAttribute="centerX" id="Rog-u7-nKo"/>
+                            <constraint firstItem="iuO-s7-NIh" firstAttribute="centerY" secondItem="2od-6O-s95" secondAttribute="centerY" id="WGu-kD-VGR"/>
+                            <constraint firstItem="nnX-J6-Qra" firstAttribute="centerX" secondItem="2od-6O-s95" secondAttribute="centerX" id="X6q-9N-5rW"/>
+                            <constraint firstAttribute="bottom" secondItem="22p-Fe-B43" secondAttribute="bottom" id="YO4-xS-XSX"/>
+                            <constraint firstItem="Lh7-Cc-9ga" firstAttribute="centerY" secondItem="2od-6O-s95" secondAttribute="centerY" constant="-30" id="aT0-g7-yXd"/>
+                            <constraint firstAttribute="trailing" secondItem="22p-Fe-B43" secondAttribute="trailing" id="amM-nV-Di7"/>
+                            <constraint firstItem="NTR-NF-shc" firstAttribute="leading" secondItem="2od-6O-s95" secondAttribute="leading" id="ggY-Tz-hmG"/>
+                            <constraint firstAttribute="trailing" secondItem="NTR-NF-shc" secondAttribute="trailing" id="h1b-S4-ePg"/>
+                            <constraint firstItem="i8D-CR-vzo" firstAttribute="centerY" secondItem="2od-6O-s95" secondAttribute="centerY" id="hNr-XJ-T5f"/>
+                            <constraint firstAttribute="height" constant="150" id="l9W-Il-cLC"/>
+                            <constraint firstItem="22p-Fe-B43" firstAttribute="top" secondItem="2od-6O-s95" secondAttribute="top" id="pRk-ak-aBK"/>
+                            <constraint firstItem="iuO-s7-NIh" firstAttribute="centerX" secondItem="2od-6O-s95" secondAttribute="centerX" id="rs0-X6-2c9"/>
+                            <constraint firstItem="i8D-CR-vzo" firstAttribute="centerX" secondItem="2od-6O-s95" secondAttribute="centerX" id="wHX-kP-3ba"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xed-lC-3tp" userLabel="bottomV">
+                        <rect key="frame" x="0.0" y="150" width="604" height="100"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZa-DQ-PgH" userLabel="title1">
+                                <rect key="frame" x="20" y="20" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="My4-ho-nZh" userLabel="title2">
+                                <rect key="frame" x="20" y="30" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsl-73-XzZ">
+                                <rect key="frame" x="20" y="35" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mX-kk-jpP">
+                                <rect key="frame" x="25" y="35" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4HS-Jk-Bmw">
+                                <rect key="frame" x="540" y="-22" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Mj4-8O-XHH"/>
+                                    <constraint firstAttribute="width" constant="44" id="vw9-sZ-QwD"/>
+                                </constraints>
+                                <state key="normal" image="placeholderImage"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mZa-DQ-PgH" firstAttribute="top" secondItem="xed-lC-3tp" secondAttribute="top" constant="20" id="2Dz-ac-ToM"/>
+                            <constraint firstItem="Xsl-73-XzZ" firstAttribute="top" secondItem="My4-ho-nZh" secondAttribute="bottom" constant="5" id="B7H-yH-wu0"/>
+                            <constraint firstAttribute="trailing" secondItem="4HS-Jk-Bmw" secondAttribute="trailing" constant="20" id="CIS-yQ-mdJ"/>
+                            <constraint firstItem="6mX-kk-jpP" firstAttribute="leading" secondItem="Xsl-73-XzZ" secondAttribute="trailing" constant="5" id="LM1-cc-aTc"/>
+                            <constraint firstAttribute="height" constant="100" id="P4M-C7-QkF"/>
+                            <constraint firstItem="4HS-Jk-Bmw" firstAttribute="top" secondItem="xed-lC-3tp" secondAttribute="top" constant="-22" id="Yda-XT-aH3"/>
+                            <constraint firstItem="My4-ho-nZh" firstAttribute="leading" secondItem="mZa-DQ-PgH" secondAttribute="leading" id="eQf-1K-Ekb"/>
+                            <constraint firstItem="mZa-DQ-PgH" firstAttribute="leading" secondItem="xed-lC-3tp" secondAttribute="leading" constant="20" id="gGw-ZO-oCh"/>
+                            <constraint firstItem="Xsl-73-XzZ" firstAttribute="leading" secondItem="mZa-DQ-PgH" secondAttribute="leading" id="j7d-ZR-pj9"/>
+                            <constraint firstItem="6mX-kk-jpP" firstAttribute="centerY" secondItem="Xsl-73-XzZ" secondAttribute="centerY" id="n9v-l8-Xri"/>
+                            <constraint firstItem="My4-ho-nZh" firstAttribute="top" secondItem="mZa-DQ-PgH" secondAttribute="bottom" constant="10" id="pht-mJ-sOe"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XbP-aD-bxp">
+                        <rect key="frame" x="0.0" y="250" width="604" height="10"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="10" id="JQH-Mx-mOa"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="xed-lC-3tp" secondAttribute="trailing" id="29y-Ez-7hy"/>
+                    <constraint firstAttribute="trailing" secondItem="2od-6O-s95" secondAttribute="trailing" id="8aV-7U-lCj"/>
+                    <constraint firstItem="2od-6O-s95" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Pzh-Kx-4gl"/>
+                    <constraint firstItem="XbP-aD-bxp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ty6-iv-Xnb"/>
+                    <constraint firstItem="xed-lC-3tp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Xky-hV-cJd"/>
+                    <constraint firstItem="xed-lC-3tp" firstAttribute="top" secondItem="2od-6O-s95" secondAttribute="bottom" id="acP-mh-qXr"/>
+                    <constraint firstItem="2od-6O-s95" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jBd-4k-HBA"/>
+                    <constraint firstAttribute="trailing" secondItem="XbP-aD-bxp" secondAttribute="trailing" id="jlW-wt-7a2"/>
+                    <constraint firstItem="XbP-aD-bxp" firstAttribute="top" secondItem="xed-lC-3tp" secondAttribute="bottom" id="kze-yE-aEf"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="235" y="337"/>
+            <connections>
+                <outlet property="authorBtn" destination="4HS-Jk-Bmw" id="SBW-1V-awL"/>
+                <outlet property="bigImageV" destination="NTR-NF-shc" id="fw1-QI-uaC"/>
+                <outlet property="bigImageViewHeight" destination="l9W-Il-cLC" id="SrJ-9J-wMe"/>
+                <outlet property="bottomDetaileTitle" destination="My4-ho-nZh" id="Cg1-Ov-gbb"/>
+                <outlet property="bottomPeopleCount" destination="6mX-kk-jpP" id="fsb-4B-nlg"/>
+                <outlet property="bottomTitle" destination="mZa-DQ-PgH" id="ywC-Uu-daS"/>
+                <outlet property="bottomTitle1Margin" destination="2Dz-ac-ToM" id="8gR-mA-KdM"/>
+                <outlet property="bottomTitle2Margin" destination="pht-mJ-sOe" id="zXD-B3-qwU"/>
+                <outlet property="bottomTitle3Margin" destination="B7H-yH-wu0" id="W1x-cU-Xok"/>
+                <outlet property="bottomView" destination="xed-lC-3tp" id="9tE-fQ-qz8"/>
+                <outlet property="bottomViewHeight" destination="P4M-C7-QkF" id="HaL-iu-k6k"/>
+                <outlet property="cellMarginTopConstraint" destination="kze-yE-aEf" id="bkT-3l-D0M"/>
+                <outlet property="cellMarginView" destination="XbP-aD-bxp" id="u1Z-O9-iPr"/>
+                <outlet property="imageDetaileTitle" destination="nnX-J6-Qra" id="hZB-96-jXY"/>
+                <outlet property="imageTitle" destination="Lh7-Cc-9ga" id="KkJ-rR-Cue"/>
+                <outlet property="scoreTitle" destination="Xsl-73-XzZ" id="62i-Ua-k0f"/>
+                <outlet property="videoBtn" destination="iuO-s7-NIh" id="q1j-lg-FRB"/>
+                <outlet property="whisperLable" destination="i8D-CR-vzo" id="DR6-tT-dK1"/>
+            </connections>
+            <point key="canvasLocation" x="-134" y="76"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="placeholderImage" width="110" height="110"/>
+        <image name="playButton" width="88" height="88"/>
+    </resources>
 </document>
